gcc/testsuite/algol68/compile/error-module-not-found-1.a68
access
       Foo { dg-error "cannot find module" }
begin skip end
      
